Adding bootstrap navbar

--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,15 @@
   <meta charset="UTF-8">
   <title>Contact | Your Name</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <!-- Adding bootstratp 3.3.7 CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
 
-  <header id="masthead">
+  <!-- original header -->
+  <!-- <header id="masthead">
     <div class="container">
       <a href="index.html" id="logo">Your Name</a>
       <nav>
@@ -19,7 +22,28 @@
         <a href="contact.html">Contact</a>
       </nav>
     </div>
-  </header>
+  </header> -->
+  <!-- bootstrap navbar -->
+  <nav class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Levi Crouch</a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a href="index.html">About</a>
+            </li>
+            <li>
+              <a href="portfolio.html">Portfolio</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
   <div id="main-container" class="container">
     <section class="main-section">
