Adding containers rows and columns

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>About | Your Name</title>
+  <title>About | Levi Crouch</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <!-- Adding bootstratp 3.3.7 CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  
+
 
 </head>
 
 <body>
-<!-- original header -->
+  <!-- original header -->
   <!-- <header id="masthead">
     <div class="container">
       <a href="index.html" id="logo">Your Name</a>
@@ -26,46 +26,63 @@
   </header> -->
   <!-- bootstrap navbar -->
   <nav class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">Levi Crouch</a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">About</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </div>
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Levi Crouch</a>
       </div>
-    </nav>
-
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a href="portfolio.html">Portfolio</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <div id="main-container" class="container">
-    <section class="main-section">
-      <h1>About Me</h1>
+    <div class="row">
+      <div class="col-md-8">
+        <section class="main-section">
+          <h1>About Me</h1>
 
-      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+          <img src="assets/images/cat.jpg" class="auth-image" alt="Levi Crouch">
 
-      <p>Marshmallow jelly souffl&eacute; pastry biscuit gummi bears tootsie roll tootsie roll gingerbread. Cotton candy muffin gingerbread fruitcake. Sweet roll souffl&eacute; topping wafer croissant oat cake gummi&nbsp;bears.</p>
+          <p>Marshmallow jelly souffl&eacute; pastry biscuit gummi bears tootsie roll tootsie roll gingerbread. Cotton candy
+            muffin gingerbread fruitcake. Sweet roll souffl&eacute; topping wafer croissant oat cake gummi&nbsp;bears.</p>
 
-      <p>Jelly-o cheesecake dessert fruitcake ice cream brownie liquorice souffl&eacute;. Caramels biscuit gummi bears tiramisu chupa chups. Croissant macaroon cotton candy cake pudding.</p>
+          <p>Jelly-o cheesecake dessert fruitcake ice cream brownie liquorice souffl&eacute;. Caramels biscuit gummi bears tiramisu
+            chupa chups. Croissant macaroon cotton candy cake pudding.</p>
 
-    </section>
-
-    <section class="sidebar">
-      <div id="connect">
-        <h2>Connect with Me</h2>
-
-        <a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+        </section>
       </div>
-    </section>
-  </div>
+      <div class="col-md-4">
+        <section class="sidebar">
+          <div id="connect">
+            <h2>Connect with Me</h2>
 
+            <a href="#">
+              <img src="assets/images/github-128.png" class="social" alt="GitHub" />
+            </a>
+            <a href="#">
+              <img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" />
+            </a>
+            <a href="#">
+              <img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" />
+            </a>
+          </div>
+        </section>
+      </div>
+    </div>
+  </div>
   <footer>
     <div class="container">
-      Copyright &copy; 2016 Your Name
+      Copyright &copy; 2017 Levi Crouch
     </div>
   </footer>
 </body>
