--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Contact | Your Name</title>
+  <title>Contact | Levi Crouch</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <!-- Adding bootstratp 3.3.7 CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -25,64 +25,75 @@
   </header> -->
   <!-- bootstrap navbar -->
   <nav class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">Levi Crouch</a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-              <a href="index.html">About</a>
-            </li>
-            <li>
-              <a href="portfolio.html">Portfolio</a>
-            </li>
-            <li>
-              <a href="#">Contact</a>
-            </li>
-          </ul>
-        </div>
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Levi Crouch</a>
       </div>
-    </nav>
-
-  <div id="main-container" class="container">
-    <section class="main-section">
-      <h1>Contact</h1>
-
-      <form id="contact-form">
-        <ul>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
           <li>
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="John Smith" required="required">
+            <a href="index.html">About</a>
           </li>
           <li>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+            <a href="portfolio.html">Portfolio</a>
           </li>
           <li>
-            <label for="message">Message</label>
-            <textarea id="message" name="message" required="required"></textarea>
+            <a href="#">Contact</a>
           </li>
         </ul>
-        <input type="submit">
-      </form>
-
-    </section>
-
-    <section class="sidebar">
-      <div id="connect">
-        <h2>Connect with Me</h2>
-
-        <a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
       </div>
-    </section>
+    </div>
+  </nav>
+
+  <div id="main-container" class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <section class="main-section">
+          <h1>Contact</h1>
+
+          <form id="contact-form">
+            <ul>
+              <li>
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" placeholder="John Smith" required="required">
+              </li>
+              <li>
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+              </li>
+              <li>
+                <label for="message">Message</label>
+                <textarea id="message" name="message" required="required"></textarea>
+              </li>
+            </ul>
+            <input type="submit">
+          </form>
+
+        </section>
+      </div>
+      <div class="col-md-4">
+        <section class="sidebar">
+          <div id="connect">
+            <h2>Connect with Me</h2>
+
+            <a href="#">
+              <img src="assets/images/github-128.png" class="social" alt="GitHub" />
+            </a>
+            <a href="#">
+              <img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" />
+            </a>
+            <a href="#">
+              <img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" />
+            </a>
+          </div>
+        </section>
+      </div>
+    </div>
   </div>
 
   <footer>
     <div class="container">
-      Copyright &copy; 2016 Your Name
+      Copyright &copy; 2017 Levi Crouch
     </div>
   </footer>
 </body>
