--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio | Your Name</title>
+  <title>Portfolio | Levi Crouch</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <!-- Adding bootstratp 3.3.7 CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -15,7 +15,7 @@
   <!-- original header -->
   <!-- <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="sidebar">Your Name</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -25,72 +25,83 @@
   </header> -->
   <!-- bootstrap navbar -->
   <nav class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">Levi Crouch</a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-              <a href="index.html">About</a>
-            </li>
-            <li>
-              <a href="#">Portfolio</a>
-            </li>
-            <li>
-              <a href="contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Levi Crouch</a>
       </div>
-    </nav>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a href="index.html">About</a>
+          </li>
+          <li>
+            <a href="#">Portfolio</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
   <div id="main-container" class="container">
-    <section class="main-section">
-      <h1>Portfolio</h1>
+    <div class="row">
+      <div class="col-md-8">
+        <section class="main-section">
+          <h1>Portfolio</h1>
 
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
+          <div class="work">
+            <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
 
-        <h3>Hangman</h3>
+            <h3>Hangman</h3>
+          </div>
+          <div class="work">
+            <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+
+            <h3>RPG Game</h3>
+          </div>
+          <div class="work">
+            <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+
+            <h3>Trivia Game</h3>
+          </div>
+          <div class="work">
+            <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+
+            <h3>Rutgers Info Widget</h3>
+          </div>
+          <div class="work">
+            <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+
+            <h3>Rock Paper Scissors</h3>
+          </div>
+
+        </section>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+      <div class="col-md-4">
+        <section class="sidebar">
+          <div id="connect">
+            <h2>Connect with Me</h2>
 
-        <h3>RPG Game</h3>
+            <a href="#">
+              <img src="assets/images/github-128.png" class="social" alt="GitHub" />
+            </a>
+            <a href="#">
+              <img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" />
+            </a>
+            <a href="#">
+              <img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" />
+            </a>
+          </div>
+        </section>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-
-        <h3>Trivia Game</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-
-        <h3>Rutgers Info Widget</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
-
-        <h3>Rock Paper Scissors</h3>
-      </div>
-
-    </section>
-
-    <section class="sidebar">
-      <div id="connect">
-        <h2>Connect with Me</h2>
-
-        <a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
-      </div>
-    </section>
+    </div>
   </div>
 
   <footer>
     <div class="container">
-      Copyright &copy; 2016 Your Name
+      Copyright &copy; 2017 Levi Crouch
     </div>
   </footer>
 </body>
