set formatting for screens less than 768px

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Adding bootstratp 3.3.7 CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
@@ -26,25 +26,26 @@
   </header> -->
   <!-- bootstrap navbar -->
   <nav class="navbar navbar-default">
-    <div class="container">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">Levi Crouch</a>
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Levi Crouch</a>
+        </div>
+        <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> -->
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li>
+              <a href="portfolio.html">Portfolio</a>
+            </li>
+            <li>
+              <a href="contact.html">Contact</a>
+            </li>
+          </ul>
+        <!-- </div> -->
       </div>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <li>
-            <a href="#">About</a>
-          </li>
-          <li>
-            <a href="portfolio.html">Portfolio</a>
-          </li>
-          <li>
-            <a href="contact.html">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+    </nav>
+  
   <div id="main-container" class="container">
     <div class="row">
       <div class="col-md-8">
