--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
       <div class="navbar-header">
         <a class="navbar-brand" href="#">Levi Crouch</a>
       </div>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> -->
         <ul class="nav navbar-nav navbar-right">
           <li>
             <a href="index.html">About</a>
@@ -41,7 +41,7 @@
             <a href="contact.html">Contact</a>
           </li>
         </ul>
-      </div>
+      <!-- </div> -->
     </div>
   </nav>
 
